--- a/src/components/roomCard.css
+++ b/src/components/roomCard.css
@@ -22,13 +22,44 @@
 
 .room-card-image-select {
   position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+.room-amenities-select {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 22px;
+  padding: 0 10px;
+  gap: 10px;
+}
+
+.amenity-item-select {
+  display: flex;
+  flex-direction: row; /* Change from column to row */
+  align-items: center;
+  justify-content: flex-start; /* Align items to the left */
+  gap: 10px; /* Adjust gap between label and icon */
+  text-align: left; /* Ensure text alignment is correct */
+}
+
+.amenity-item-select img {
+  width: 20px;
+  height: 20px;
+  object-fit: contain;
+}
+
+.amenity-item-select span {
+  font-size: 12px;
+  color: #555;
 }
 
 .room-card-content-select {
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start; /* Align content to the top */
+  justify-content: flex-start;
   gap: 10px;
 }
 
