--- a/src/components/selectRoom.css
+++ b/src/components/selectRoom.css
@@ -42,13 +42,33 @@
   align-items: center;
   gap: 20px;
   z-index: 10;
+  margin-left: 110px;
 }
 
 .booking-item-select {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  flex: none;
   gap: 5px;
+  position: relative;
+  padding: 0 10px;
+  margin-top: 10px;
+}
+
+.booking-item-select::after {
+  content: '';
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 1px;
+  height: 50px;
+  background-color: #ccc;
+}
+
+.booking-item-select:last-of-type::after {
+  display: none;
 }
 
 .booking-item-select span {
@@ -57,26 +77,21 @@
   display: flex;
   align-items: center;
   gap: 5px;
+  margin-bottom: -10px;
 }
 
 .booking-item-select span i {
-  font-size: 20px;
+  font-size: 15px;
   color: #c79b45;
 }
 
 .booking-item-select input {
   font-size: 16px;
   padding: 8px;
-  width: 180px;
-  border: 1px solid #ddd;
+  width: 150px;
+  border: none;
   border-radius: 5px;
   outline: none;
-  color: #555;
-}
-
-.booking-item-select input:focus {
-  border-color: #c79b45;
-  box-shadow: 0 0 5px rgba(199, 155, 69, 0.5);
 }
 
 .book-room-select {
